--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -1030,6 +1030,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
     font-size: 18px;
     color: #222;
     line-height: 1.3;
+    text-align: center;
 }
 
 /*---------------------------------------------*/
@@ -3634,4 +3635,9 @@ input.num-product::-webkit-inner-spin-button {
 
 .bx-10 {
     width: 10px !important;
+}
+.titel-car {
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
 }
