--- a/public/template/css/style1.css
+++ b/public/template/css/style1.css
@@ -12461,7 +12461,7 @@ header.header .header-main .customer-support-text .text a:focus {
 header.header .header-main .items-cart-inner {
     float: right;
     margin-left: 25px;
-    margin-top: 10px;
+    margin-top: 18px;
 }
 header.header .header-main .items-cart-inner .showcart {
     font-size: 27px;
@@ -19283,4 +19283,8 @@ footer.footer-other {
 .fa-caret-down {
     float: right;
     padding-right: 8px;
+}
+
+.icon-header-item {
+    color: white;
 }
