--- a/public/template/css/style1.css
+++ b/public/template/css/style1.css
@@ -19280,7 +19280,7 @@ footer.footer-other {
 }
 
 /* Optional: Style the caret down icon */
-.fa-caret-down {
+.fa-angle-down {
     float: right;
     padding-right: 8px;
 }
