--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -1,7 +1,7 @@
 /*------------------------------------------------------------------
-Project:  
-Version:  
-Last change:  
+Project:
+Version:
+Last change:
 Assigned to:  Le Xuan Bach
 Primary use:  Company
 -------------------------------------------------------------------*/
@@ -19,10 +19,10 @@ Primary use:  Company
 /*------------------------------------------------------------------
 [COLOR CODES]
 
-# Text Color      :  
-# Primary Color 01:  
-# Primary Color 02:   
-# Primary Color 03:  
+# Text Color      :
+# Primary Color 01:
+# Primary Color 02:
+# Primary Color 03:
 
 ------------------------------------------------------------------*/
 /*------------------------------------------------------------------
@@ -2455,7 +2455,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 /*==================================================================
-    SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE 
+    SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE SIZE
 ==================================================================*/
 
 /*//////////////////////////////////////////////////////////////////
@@ -2674,7 +2674,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 /*==================================================================
-   BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND 
+   BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND BACKGROUND
 ==================================================================*/
 .bg-none {
     background-color: transparent;
@@ -2827,7 +2827,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 /*==================================================================
- HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW 
+ HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW
 ==================================================================*/
 .plh0::-webkit-input-placeholder {
     color: #999999;
@@ -3593,7 +3593,7 @@ input.num-product::-webkit-inner-spin-button {
 
 /* cart */
 .cart_titel {
-    display: flex;
+
     justify-content: space-around;
 }
 .container_cart {
@@ -3639,5 +3639,13 @@ input.num-product::-webkit-inner-spin-button {
 .titel-car {
     font-family: "Roboto", Helvetica, Arial, sans-serif;
     font-size: 18px;
+    font-weight: 900;
+}
+.titel-car-a{
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+    font-size: 14px;
     font-weight: 700;
+}
+.text-cent{
+    text-align: center;
 }
