--- a/public/template/css/style1.css
+++ b/public/template/css/style1.css
@@ -19130,6 +19130,7 @@ footer.footer-other {
 * {
     box-sizing: border-box;
 }
+
 /* Slideshow container */
 .slideshow-container {
     max-width: 1000px;
@@ -19137,42 +19138,8 @@ footer.footer-other {
     margin: auto;
 }
 
-/* Hide the images by default */
-.mySlider {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prevv,
-.nextt {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-/* Position the "next button" to the right */
-.nextt {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
 /* Caption text */
-.textt {
+.text {
     color: #f2f2f2;
     font-size: 15px;
     padding: 8px 12px;
@@ -19193,7 +19160,6 @@ footer.footer-other {
 
 /* The dots/bullets/indicators */
 .dot {
-    cursor: pointer;
     height: 15px;
     width: 15px;
     margin: 0 2px;
@@ -19203,8 +19169,7 @@ footer.footer-other {
     transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
+.active {
     background-color: #717171;
 }
 
@@ -19214,14 +19179,6 @@ footer.footer-other {
     animation-duration: 1.5s;
 }
 
-@keyframes fadee {
-    from {
-        opacity: 0.4;
-    }
-    to {
-        opacity: 1;
-    }
-}
 
 /* pagi */
 .pagi {
