--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -3679,3 +3679,77 @@ input.num-product::-webkit-inner-spin-button {
     padding-bottom: 36px;
     color: #49b14d;
 }
+.flex{
+    display: flex;
+}
+.ca-letf{
+flex: 1;
+    display: inline-block;
+    width: 10% !important;
+    float: right;
+}
+.ca-right{
+    flex: 4;
+    display: inline-block;
+}
+.lis-ca a{
+    color: black;
+}
+.lis-ca a:hover{
+    color: #49B14D;
+}
+/*loading*/
+@keyframes spin {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.spinner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1003;
+    background: #000000;
+    overflow: hidden;
+}
+.spinner div:first-child {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    box-shadow: 0 3px 3px 0 rgba(255, 56, 106, 1);
+    transform: translate3d(0, 0, 0);
+    animation: spin 0.5s linear infinite;
+}
+.spinner div:first-child:after,
+.spinner div:first-child:before {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+}
+.spinner div:first-child:before {
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    box-shadow: 0 3px 3px 0 rgb(255, 228, 32);
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 0.5s linear infinite;
+}
+.spinner div:first-child:after {
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    box-shadow: 0 3px 3px 0 rgba(61, 175, 255, 1);
+    animation: spin 0.5s linear infinite;
+}
